added string implementation